feat: add automatic seeding fixes #130
