# services/gateway/models/success.go
@@ -1,0 +1,11 @@
+package models
+
+type SuccessMessage string
+
+const (
+	SucccesMessage SuccessMessage = "SUCCESS"
+)
+
+type Success struct {
+	Message SuccessMessage `json:"message"`
+}
